// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordForm /> Should render and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(14,14,14,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
  color: unset;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
  color: unset;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
  color: unset;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c10 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c13 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  border-radius: 5px;
  height: 46px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  max-width: 100% !important;
  width: 100%;
  margin: 0 !important;
  padding: 0 !important;
}

.c7 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  margin-right: 0;
}

.c12 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c12:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c12:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      aria-describedby="modal-description"
      aria-labelledby="modal-title"
      class="c1 c2"
      overflow="auto"
      role="dialog"
    >
      <div
        class="c3"
        style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; max-width: 960px;"
      >
        <div
          class=""
          style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: space-between;"
        >
          <div
            align="flex-start"
            class="c4"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 83.33333333333334%; flex-basis: 83.33333333333334%; flex-grow: 0; flex-shrink: 0; max-width: 83.33333333333334%; margin-left: 0%;"
          >
            <h1
              class="c5"
              id="modal-title"
            >
              Reset your password
            </h1>
          </div>
          <div
            align="end"
            class="c6"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 16.666666666666668%; flex-basis: 16.666666666666668%; flex-grow: 0; flex-shrink: 0; max-width: 16.666666666666668%; margin-left: 0%;"
          >
            <button
              aria-label="Close window"
              class="c7"
              data-cy="modal-close-button"
              data-testid="close-modal-button"
              title="Close window"
            >
              <img
                alt="cross"
                src="IMAGE_MOCK"
              />
            </button>
          </div>
        </div>
        <div
          class=""
          style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start;"
        >
          <div
            align="flex-start"
            class="c4"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
          >
            <div
              class="c8"
              id="modal-description"
              width="100%"
            >
              <div
                class="c9"
              >
                <label
                  for="oldPassword"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    Old password
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="oldPassword"
                    name="oldPassword"
                    placeholder="Your old password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <div
                class="c9"
              >
                <label
                  for="newPassword"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    New password
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="newPassword"
                    name="newPassword"
                    placeholder="Your new password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <div
                class="c9"
              >
                <label
                  for="newPasswordConfirmation"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    Confirmation
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="newPasswordConfirmation"
                    name="newPasswordConfirmation"
                    placeholder="Confirm your new password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <button
                class="c13"
                color="primary"
                data-testid="submit-button"
                disabled=""
                height="46"
                radius="100px"
                type="submit"
              >
                Reset password
              </button>
            </div>
          </div>
        </div>
        <span
          style="display: table; clear: both;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordForm /> Should render error and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 999;
  background-color: rgba(14,14,14,0.4);
  border-radius: 0px;
  border-radius: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  left: 0px;
  top: 0px;
  color: unset;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  max-width: 700px;
  max-height: 90%;
  min-width: 450px;
  min-height: 200px;
  overflow: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: rgba(255,255,255,1);
  color: unset;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  margin-top: 10px;
  border-radius: 0px;
  border-radius: 0px;
  color: unset;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c15 {
  width: auto;
  height: auto;
  margin-right: 15px;
}

.c10 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  margin-bottom: 5px;
  color: #2F3850;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 15px;
  font-weight: 700;
  color: #2F3850;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.c14 {
  padding: 20px;
  width: 100%;
  max-width: 700px;
  background-color: rgba(210,55,29,0.3);
  border: 1px solid #D2371D;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 p {
  color: #2F3850;
}

.c13 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  cursor: default;
  background-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-top: 25px;
  margin-bottom: 25px;
  border-radius: 5px;
  height: 46px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  max-width: 100% !important;
  width: 100%;
  margin: 0 !important;
  padding: 0 !important;
}

.c7 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  margin-right: 0;
}

.c12 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  width: 100%;
  height: 46px;
  color: #2F3850;
}

.c12:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c12:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (max-width:480px) {
  .c2 {
    max-height: calc(100% - 20px);
    max-width: none;
    min-width: 0;
    width: calc(100% - 20px);
  }
}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    width="100%"
  >
    <div
      aria-describedby="modal-description"
      aria-labelledby="modal-title"
      class="c1 c2"
      overflow="auto"
      role="dialog"
    >
      <div
        class="c3"
        style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; max-width: 960px;"
      >
        <div
          class=""
          style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: space-between;"
        >
          <div
            align="flex-start"
            class="c4"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 83.33333333333334%; flex-basis: 83.33333333333334%; flex-grow: 0; flex-shrink: 0; max-width: 83.33333333333334%; margin-left: 0%;"
          >
            <h1
              class="c5"
              id="modal-title"
            >
              Reset your password
            </h1>
          </div>
          <div
            align="end"
            class="c6"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 16.666666666666668%; flex-basis: 16.666666666666668%; flex-grow: 0; flex-shrink: 0; max-width: 16.666666666666668%; margin-left: 0%;"
          >
            <button
              aria-label="Close window"
              class="c7"
              data-cy="modal-close-button"
              data-testid="close-modal-button"
              title="Close window"
            >
              <img
                alt="cross"
                src="IMAGE_MOCK"
              />
            </button>
          </div>
        </div>
        <div
          class=""
          style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start;"
        >
          <div
            align="flex-start"
            class="c4"
            style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
          >
            <div
              class="c8"
              id="modal-description"
              width="100%"
            >
              <div
                class="c9"
              >
                <label
                  for="oldPassword"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    Old password
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="oldPassword"
                    name="oldPassword"
                    placeholder="Your old password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <div
                class="c9"
              >
                <label
                  for="newPassword"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    New password
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="newPassword"
                    name="newPassword"
                    placeholder="Your new password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <div
                class="c9"
              >
                <label
                  for="newPasswordConfirmation"
                >
                  <p
                    class="c10"
                    width="fit-content"
                  >
                    Confirmation
                  </p>
                </label>
                <div
                  class="c11"
                  width="100%"
                >
                  <input
                    class="c12"
                    height="46"
                    id="newPasswordConfirmation"
                    name="newPasswordConfirmation"
                    placeholder="Confirm your new password"
                    type="password"
                    value=""
                    width="100%"
                  />
                </div>
              </div>
              <button
                class="c13"
                color="primary"
                data-testid="submit-button"
                disabled=""
                height="46"
                radius="100px"
                type="submit"
              >
                Reset password
              </button>
              <div
                class="c14"
              >
                <img
                  alt="error"
                  class="c15"
                  src="IMAGE_MOCK"
                />
                <p
                  class="c16"
                  font-size="15"
                  font-weight="bold"
                >
                  Test error
                </p>
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: table; clear: both;"
        />
      </div>
    </div>
  </div>
</div>
`;
